--- a/index.html
+++ b/index.html
@@ -1,158 +1,162 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Undercoded – Where Vision Becomes Viral</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Undercoded - Connect & Create</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-    }
+    .fade-in { opacity: 0; transform: translateY(20px); transition: all 0.6s ease; }
+    .fade-in.show { opacity: 1; transform: translateY(0); }
   </style>
 </head>
-<body class="bg-white text-gray-800">
+<body class="bg-gray-50 text-gray-900">
 
-  <!-- Header -->
-  <header class="bg-white shadow-md fixed top-0 w-full z-50">
-    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold tracking-tight">undercoded</h1>
-      <nav class="hidden md:flex space-x-8 text-sm font-medium">
-        <a href="#features" class="text-gray-600 hover:text-black transition">Features</a>
-        <a href="#community" class="text-gray-600 hover:text-black transition">Community</a>
-        <a href="#creators" class="text-gray-600 hover:text-black transition">Creators</a>
-        <a href="#login" class="text-black font-semibold border border-black rounded-full px-4 py-1 hover:bg-black hover:text-white transition">Log In</a>
+  <!-- Navbar -->
+  <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
+    <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-4">
+      <h1 class="text-2xl font-bold">Undercoded</h1>
+      <!-- Desktop Nav -->
+      <nav class="hidden md:flex space-x-6">
+        <a href="#features" class="hover:text-indigo-600">Features</a>
+        <a href="#creators" class="hover:text-indigo-600">Creators</a>
+        <a href="#about" class="hover:text-indigo-600">About</a>
+      </nav>
+      <div class="hidden md:flex space-x-4">
+        <button onclick="openLoginModal()" class="px-4 py-2 rounded-full border border-indigo-600 text-indigo-600 hover:bg-indigo-600 hover:text-white transition">Log In</button>
+        <button onclick="openJoinModal()" class="px-4 py-2 rounded-full bg-indigo-600 text-white hover:bg-indigo-700 transition">Sign Up</button>
+      </div>
+      <!-- Mobile Menu Button -->
+      <button id="menu-btn" class="md:hidden">
+        <i data-feather="menu"></i>
+      </button>
+    </div>
+    <!-- Mobile Nav -->
+    <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg">
+      <nav class="flex flex-col space-y-2 px-6 py-4">
+        <a href="#features" class="hover:text-indigo-600">Features</a>
+        <a href="#creators" class="hover:text-indigo-600">Creators</a>
+        <a href="#about" class="hover:text-indigo-600">About</a>
+        <button onclick="openLoginModal()" class="w-full text-left text-indigo-600">Log In</button>
+        <button onclick="openJoinModal()" class="w-full text-left text-white bg-indigo-600 rounded px-4 py-2">Sign Up</button>
       </nav>
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="relative bg-black text-white pt-32 pb-20">
-    <img src="https://images.unsplash.com/photo-1496346651079-6ca5cb67f42f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80" alt="Creative background" class="absolute inset-0 h-full w-full object-cover opacity-20" />
-    <div class="relative max-w-4xl mx-auto px-6 text-center">
-      <h2 class="text-5xl sm:text-6xl font-extrabold mb-6 leading-tight">Create. Inspire. Belong.</h2>
-      <p class="text-gray-300 text-lg sm:text-xl mb-8">Welcome to the aesthetic revolution. Share your world, your art, your story — and connect through beauty.</p>
-      <a href="#join" class="inline-block px-8 py-3 bg-white text-black rounded-full text-lg font-semibold hover:bg-gray-200 transition">Join the Movement</a>
+  <section class="relative bg-cover bg-center h-screen flex items-center justify-center text-center" style="background-image: url('https://images.unsplash.com/photo-1529101091764-c3526daf38fe?auto=format&fit=crop&w=1600&q=80');">
+    <div class="bg-black bg-opacity-50 absolute inset-0"></div>
+    <div class="relative z-10 text-white max-w-3xl px-6 fade-in">
+      <h2 class="text-5xl font-bold mb-6">Where Creativity Meets Connection</h2>
+      <p class="text-xl mb-8">Join millions of creators and communities building the future of expression.</p>
+      <div class="flex justify-center space-x-4">
+        <a href="#" onclick="openJoinModal()" class="px-8 py-3 bg-indigo-600 rounded-full text-lg font-semibold hover:bg-indigo-700 transition">Join the Movement</a>
+        <a href="#" onclick="openLoginModal()" class="px-8 py-3 bg-white text-black rounded-full text-lg font-semibold hover:bg-gray-200 transition">Log In</a>
+      </div>
     </div>
   </section>
 
   <!-- Features Section -->
-  <section id="features" class="scroll-mt-32 max-w-7xl mx-auto py-24 px-6">
-    <h3 class="text-4xl font-bold text-center mb-16">Why Millions Choose Undercoded</h3>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12">
-      <div class="text-center">
-        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=600&q=80" class="rounded-xl mb-4 mx-auto shadow" alt="Global Reach" />
-        <h4 class="font-semibold text-xl mb-2">Global Reach</h4>
-        <p class="text-gray-600">Connect with creators and dreamers from every corner of the world.</p>
+  <section id="features" class="py-24 bg-gray-100">
+    <div class="max-w-7xl mx-auto px-6 text-center">
+      <h3 class="text-4xl font-bold mb-12 fade-in">Powerful Features</h3>
+      <div class="grid md:grid-cols-3 gap-10">
+        <div class="fade-in">
+          <img src="https://source.unsplash.com/400x300/?global" class="rounded-xl mb-4 mx-auto shadow" alt="Global Reach">
+          <h4 class="text-xl font-semibold mb-2">Global Reach</h4>
+          <p>Connect with people worldwide instantly and share your passion with a global audience.</p>
+        </div>
+        <div class="fade-in">
+          <img src="https://source.unsplash.com/400x300/?art,creative" class="rounded-xl mb-4 mx-auto shadow" alt="Built for Artists">
+          <h4 class="text-xl font-semibold mb-2">Built for Artists</h4>
+          <p>Designed with creators in mind, making it easier than ever to showcase your work.</p>
+        </div>
+        <div class="fade-in">
+          <img src="https://source.unsplash.com/400x300/?city,street" class="rounded-xl mb-4 mx-auto shadow" alt="Smart Discovery">
+          <h4 class="text-xl font-semibold mb-2">Smart Discovery</h4>
+          <p>Discover trending communities and get recommended content tailored for you.</p>
+        </div>
       </div>
-      <div class="text-center">
-        <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?auto=format&fit=crop&w=600&q=80" class="rounded-xl mb-4 mx-auto shadow" alt="Built for Artists" />
-        <h4 class="font-semibold text-xl mb-2">Built for Artists</h4>
-        <p class="text-gray-600">Optimized tools for photographers, designers, and storytellers to shine.</p>
-      </div>
-      <div class="text-center">
-        <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=600&q=80" class="rounded-xl mb-4 mx-auto shadow" alt="Smart Discovery" />
-        <h4 class="font-semibold text-xl mb-2">Smart Discovery</h4>
-        <p class="text-gray-600">AI recommendations that understand your style, passion, and voice.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Community Section -->
-  <section id="community" class="scroll-mt-32 bg-gray-100 py-24 text-center">
-    <h3 class="text-4xl font-bold mb-6">A Place for Visionaries</h3>
-    <p class="mb-8 text-gray-600 max-w-xl mx-auto">Join a growing network of creatives who believe in minimalist design, visual harmony, and intentional storytelling.</p>
-    <div class="flex justify-center gap-4 mt-8">
-      <img class="h-12 w-12 rounded-full object-cover border-2 border-white shadow" src="https://randomuser.me/api/portraits/women/44.jpg" alt="User 1">
-      <img class="h-12 w-12 rounded-full object-cover border-2 border-white shadow" src="https://randomuser.me/api/portraits/men/36.jpg" alt="User 2">
-      <img class="h-12 w-12 rounded-full object-cover border-2 border-white shadow" src="https://randomuser.me/api/portraits/women/65.jpg" alt="User 3">
-      <img class="h-12 w-12 rounded-full object-cover border-2 border-white shadow" src="https://randomuser.me/api/portraits/men/72.jpg" alt="User 4">
     </div>
   </section>
 
   <!-- Creators Section -->
-  <section id="creators" class="scroll-mt-32 py-24 text-center">
-    <h3 class="text-4xl font-bold mb-4">Made for Creators, by Creators</h3>
-    <p class="text-gray-600 mb-6 max-w-2xl mx-auto">Upload your portfolio, earn through your content, and grow a following that appreciates your art. Undercoded provides all the tools to thrive aesthetically and professionally.</p>
-    <a href="#join" class="px-6 py-3 bg-black text-white font-semibold rounded-full hover:bg-gray-800 transition">Start Creating</a>
+  <section id="creators" class="py-24">
+    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
+      <div class="fade-in">
+        <h3 class="text-4xl font-bold mb-6">Made for Creators</h3>
+        <p class="text-lg mb-6">Whether you’re an artist, a storyteller, or a dreamer, Undercoded gives you the tools to shine and the stage to share.</p>
+        <a href="#" onclick="openJoinModal()" class="px-6 py-3 bg-indigo-600 text-white font-semibold rounded-full hover:bg-indigo-700 transition">Start Creating</a>
+      </div>
+      <div class="fade-in">
+        <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=800&q=80" alt="Creators" class="rounded-xl shadow">
+      </div>
+    </div>
   </section>
 
-  <!-- Join Section -->
-  <section id="join" class="scroll-mt-32 bg-white py-24 text-center">
-    <h3 class="text-4xl font-bold mb-4">Join Undercoded Today</h3>
-    <p class="text-gray-600 mb-6 max-w-xl mx-auto">Sign up to explore, create, and connect. Whether you're a designer, photographer, or visionary—Undercoded is built for you.</p>
-    <a href="#" onclick="openJoinModal()" class="inline-block px-6 py-3 bg-black text-white font-semibold rounded-full hover:bg-gray-800 transition">Sign Up</a>
+  <!-- About Section -->
+  <section id="about" class="py-24 bg-gray-100">
+    <div class="max-w-4xl mx-auto text-center fade-in">
+      <h3 class="text-4xl font-bold mb-6">About Undercoded</h3>
+      <p class="text-lg">Undercoded is more than a platform—it’s a movement. We’re building the future of digital connection, powered by creativity and community.</p>
+    </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black py-12 text-center text-gray-400 text-sm">
+  <footer class="bg-black text-white py-8 text-center">
     <p>&copy; 2025 Undercoded. All rights reserved.</p>
-    <p class="mt-2">
-      <a href="#" class="hover:underline">Privacy</a> • <a href="#" class="hover:underline">Terms</a> • <a href="#" class="hover:underline">Support</a>
-    </p>
   </footer>
 
   <!-- Login Modal -->
-  <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-60 hidden items-center justify-center z-50">
-    <div class="bg-white rounded-xl p-8 max-w-sm w-full shadow-xl">
-      <h2 class="text-xl font-bold mb-4">Log In</h2>
-      <input type="text" placeholder="Email" class="w-full mb-3 px-4 py-2 border rounded-lg" />
-      <input type="password" placeholder="Password" class="w-full mb-4 px-4 py-2 border rounded-lg" />
-      <div class="flex justify-between">
-        <button onclick="closeLoginModal()" class="text-sm text-gray-500 hover:underline">Cancel</button>
-        <button class="bg-black text-white px-4 py-2 rounded-lg hover:bg-gray-800">Log In</button>
-      </div>
+  <div id="loginModal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-lg p-8 max-w-md w-full relative">
+      <button onclick="closeLoginModal()" class="absolute top-3 right-3"><i data-feather="x"></i></button>
+      <h3 class="text-2xl font-bold mb-4">Log In</h3>
+      <input type="email" placeholder="Email" class="w-full mb-3 px-4 py-2 border rounded">
+      <input type="password" placeholder="Password" class="w-full mb-6 px-4 py-2 border rounded">
+      <button class="w-full py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700">Log In</button>
     </div>
   </div>
 
   <!-- Join Modal -->
-  <div id="joinModal" class="fixed inset-0 bg-black bg-opacity-60 hidden items-center justify-center z-50">
-    <div class="bg-white rounded-xl p-8 max-w-sm w-full shadow-xl">
-      <h2 class="text-xl font-bold mb-4">Create an Account</h2>
-      <input type="text" placeholder="Username" class="w-full mb-3 px-4 py-2 border rounded-lg" />
-      <input type="email" placeholder="Email" class="w-full mb-3 px-4 py-2 border rounded-lg" />
-      <input type="password" placeholder="Password" class="w-full mb-4 px-4 py-2 border rounded-lg" />
-      <div class="flex justify-between">
-        <button onclick="closeJoinModal()" class="text-sm text-gray-500 hover:underline">Cancel</button>
-        <button class="bg-black text-white px-4 py-2 rounded-lg hover:bg-gray-800">Sign Up</button>
-      </div>
+  <div id="joinModal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-lg p-8 max-w-md w-full relative">
+      <button onclick="closeJoinModal()" class="absolute top-3 right-3"><i data-feather="x"></i></button>
+      <h3 class="text-2xl font-bold mb-4">Sign Up</h3>
+      <input type="text" placeholder="Username" class="w-full mb-3 px-4 py-2 border rounded">
+      <input type="email" placeholder="Email" class="w-full mb-3 px-4 py-2 border rounded">
+      <input type="password" placeholder="Password" class="w-full mb-6 px-4 py-2 border rounded">
+      <button class="w-full py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700">Create Account</button>
     </div>
   </div>
 
   <!-- Scripts -->
   <script>
-    const loginModal = document.getElementById('loginModal');
-    const joinModal = document.getElementById('joinModal');
+    feather.replace();
 
-    function openLoginModal() {
-      loginModal.classList.remove('hidden');
-      loginModal.classList.add('flex');
-    }
+    // Fade in animation
+    const faders = document.querySelectorAll('.fade-in');
+    const appearOnScroll = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting){
+          entry.target.classList.add('show');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.2 });
+    faders.forEach(fader => appearOnScroll.observe(fader));
 
-    function closeLoginModal() {
-      loginModal.classList.remove('flex');
-      loginModal.classList.add('hidden');
-    }
-
-    function openJoinModal() {
-      joinModal.classList.remove('hidden');
-      joinModal.classList.add('flex');
-    }
-
-    function closeJoinModal() {
-      joinModal.classList.remove('flex');
-      joinModal.classList.add('hidden');
-    }
-
-    // Activate login modal on nav click
-    document.querySelector('a[href="#login"]').addEventListener('click', function(e) {
-      e.preventDefault();
-      openLoginModal();
+    // Mobile menu toggle
+    document.getElementById("menu-btn").addEventListener("click", () => {
+      document.getElementById("mobile-menu").classList.toggle("hidden");
     });
-  </script>
 
+    // Modals
+    function openLoginModal(){ document.getElementById("loginModal").classList.remove("hidden"); }
+    function closeLoginModal(){ document.getElementById("loginModal").classList.add("hidden"); }
+    function openJoinModal(){ document.getElementById("joinModal").classList.remove("hidden"); }
+    function closeJoinModal(){ document.getElementById("joinModal").classList.add("hidden"); }
+  </script>
 </body>
 </html>
